added homework 5 and 6

--- a/homework_05/index.html
+++ b/homework_05/index.html
@@ -13,6 +13,12 @@
     </head>
     <body>
         <main>
+            <section class="block_properties">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+            </section>
             <section class="advantages">
                 <div class="advantages_container">
                     <div class="advantages_content">
